Login Page style start

--- a/app/assets/stylesheets/base_styling/mixins.scss
+++ b/app/assets/stylesheets/base_styling/mixins.scss
@@ -26,7 +26,7 @@
         height: 100%;
         @include flex();
         svg *{
-            fill: url(#logo-colors);
+            fill: url("#logo-colors")
         }
     }
 }
