--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,4 +12,6 @@
  *
  */
 
-@import "./base_styling/base.scss"
+@import "./base_styling/base.scss";
+@import "./auth/shared.scss";
+@import "./navbar/splash.scss"
