--- a/app/assets/stylesheets/base_styling/base.scss
+++ b/app/assets/stylesheets/base_styling/base.scss
@@ -8,3 +8,12 @@ body {
     color: $text; //rename
     font-family: $sans-serif;
 }
+
+#logo-button {
+    font-weight: 600;
+    height: 100%;
+    @include logoLink();
+    a span {
+        margin-left: 5px;
+    }
+}
