Resizing hamburger menu styles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,5 @@
 
 @import "./base_styling/base.scss";
 @import "./auth/shared.scss";
-@import "./navbar/splash.scss"
+@import "./navbar/splash.scss";
+@import "./splash/splash.scss";
