--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <svg id="logo-bg" height="0" width="0" position="absolute">
+    <svg id="logo-bg" height="0" width="0" style="position: absolute;">
         <defs>
             <pattern id="logo-colors" patternContentUnits="objectBoundingBox" width="1" height="1"
                 patternTransform="scale(-1.2,1.2) translate(66,-58)">
