--- a/app/assets/stylesheets/navbar/small_screens.scss
+++ b/app/assets/stylesheets/navbar/small_screens.scss
@@ -1,7 +1,36 @@
+@keyframes slideIn {
+    0% {
+        right: -100vw;
+        left: 100vw;
+    }
+    100% {
+        right: 0;
+        left: 0;
+    }
+}
+
+@keyframes slideOut {
+    0% {
+        right: 0;
+        left: 0;
+    }
+    100%{
+        right: -100vw;
+        left: 100vw;
+    }
+}
+
+
 .splash .header-nav {
     justify-content: flex-end;
     .hamburger {
         display: block;
+        .fa-bars {
+            font-size: 2rem;
+            &:hover {
+                cursor: pointer;
+            }
+        }
     }
     .nav-list {
         display: none;
@@ -15,12 +44,14 @@
     position: fixed;
     top: 0;
     bottom: 0;
-    left: 0;
-    right: 0;
     background: $sand;
     z-index: 10;
-    padding: 0 1rem 1rem;
+    padding: 0 1rem 0.5rem;
     @include grid($rows: 70px 1fr auto, $num-cols: 1);
+    animation: slideIn 0.3s forwards;
+    &.out {
+        animation: slideOut 0.3s forwards;
+    }
     > div {
         height: 4.375rem;
         padding: 1.5rem 2rem 1rem 0;
@@ -49,11 +80,6 @@
         }
     }
     > nav {
-        // position: absolute;
-        // width: 100%;
-        // bottom: 0;
-        // left: 0;
-        padding: 0 -0.5rem;
         @include grid($num-rows: 1, $col-gap: 1.5rem, $columns: repeat(auto-fit, minmax(20.3rem, 1fr)));
         button {
             height: 3.75rem;
@@ -64,7 +90,7 @@
 @media only screen and ( max-width: 720px ) {
     .ham-menu {
         > nav {
-            padding: 0 0.5rem 1rem;
+            padding: 0 0.5rem 1.5rem;
         }
         ul li {
             padding: 1rem 0;
