--- a/app/assets/stylesheets/navbar/small_screens.scss
+++ b/app/assets/stylesheets/navbar/small_screens.scss
@@ -20,6 +20,7 @@
     }
 }
 
+$slide-timing: 0.3s;
 
 .splash .header-nav {
     justify-content: flex-end;
@@ -48,9 +49,9 @@
     z-index: 10;
     padding: 0 1rem 0.5rem;
     @include grid($rows: 70px 1fr auto, $num-cols: 1);
-    animation: slideIn 0.3s forwards;
+    animation: slideIn $slide-timing cubic-bezier(0, 0, 0, 1) forwards;
     &.out {
-        animation: slideOut 0.3s forwards;
+        animation: slideOut $slide-timing cubic-bezier(0, 0, 0, 1) forwards;
     }
     > div {
         height: 4.375rem;
