--- a/app/assets/stylesheets/navbar/splash.scss
+++ b/app/assets/stylesheets/navbar/splash.scss
@@ -1,9 +1,14 @@
 $splash-hamburger-breakpoint: 1085px;
+$splash-nav-height: 4.3rem;
 
 header > div {
+    position: fixed;
+    background: $sand;
+    border-bottom: 1px solid $splash-borders;
+    z-index: 1;
     &.login, &.splash {
         @include flex($justify: flex-start);
-        height: 4.3rem;
+        height: $splash-nav-height;
         padding: 0 2rem;
     }
 }
