Splash style for min-width screens (320px)

--- a/app/assets/stylesheets/base_styling/colors.scss
+++ b/app/assets/stylesheets/base_styling/colors.scss
@@ -3,6 +3,7 @@
 // Possibly rename
 $dark-blue: #144363;
 $hover-blue-btn: #0f2e42;
+$link-hover-blue: #175283;
 //def rename
 $sand: #f9f3e7;
 $text: #212120;
