--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <%= favicon_link_tag image_path('favicon.png') %>
     <% if logged_in? %>
       <script >
         window.currentUser = <%= render("api/users/user.json.jbuilder", user: current_user).html_safe %>
